# LoremIpsumGenerator

./: CMakeLists.txt  LoremIpsumGenerator.cpp  LoremIpsumGenerator.hpp  README.md
include/: LoremIpsumGenerator.hpp
test/: LoremIpsumGeneratorTest.cpp
